# ChangeLog for dev-perl/Class-MOP
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MOP/Attic/ChangeLog,v 1.5 2009/03/13 12:28:39 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.75.ebuild,
  -Class-MOP-0.76.ebuild, -Class-MOP-0.77.ebuild:
  Cleanup

*Class-MOP-0.78 (25 Feb 2009)

  25 Feb 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.78.ebuild:
  Version bump

*Class-MOP-0.77 (15 Feb 2009)

  15 Feb 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.77.ebuild:
  Version bump

*Class-MOP-0.76 (23 Jan 2009)

  23 Jan 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.76.ebuild:
  Version bump

*Class-MOP-0.75 (14 Jan 2009)

  14 Jan 2009; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Class-MOP-0.75.ebuild:
  Initial commit. From the perl overlay
