@@ -1,0 +1,17 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/String-Format/Attic/String-Format-1.15.ebuild,v 1.1 2009/03/28 09:20:48 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=DARREN
+inherit perl-module
+
+DESCRIPTION="sprintf-like string formatting capabilities with arbitrary format definitions"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+IUSE=""
+
+SRC_TEST="do"
