@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/File-HomeDir
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-HomeDir/ChangeLog,v 1.47 2009/03/12 17:44:07 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-HomeDir/ChangeLog,v 1.48 2009/03/28 09:16:47 tove Exp $
+
+*File-HomeDir-0.86 (28 Mar 2009)
+
+  28 Mar 2009; Torsten Veller <tove@gentoo.org> +File-HomeDir-0.86.ebuild:
+  Version bump
 
 *File-HomeDir-0.84 (12 Mar 2009)
 
