@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/String-Format
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/String-Format/ChangeLog,v 1.8 2008/02/20 19:50:24 nixnut Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/String-Format/ChangeLog,v 1.9 2009/03/28 09:20:48 tove Exp $
+
+*String-Format-1.15 (28 Mar 2009)
+
+  28 Mar 2009; Torsten Veller <tove@gentoo.org> +String-Format-1.15.ebuild:
+  Version bump
 
   20 Feb 2008; nixnut <nixnut@gentoo.org> String-Format-1.14.ebuild:
   Added ~ppc wrt bug 207343
