@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Class-MOP
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MOP/Attic/ChangeLog,v 1.5 2009/03/13 12:28:39 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MOP/Attic/ChangeLog,v 1.6 2009/03/28 09:12:37 tove Exp $
+
+*Class-MOP-0.79 (28 Mar 2009)
+
+  28 Mar 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.79.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.75.ebuild,
   -Class-MOP-0.76.ebuild, -Class-MOP-0.77.ebuild:
